--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>3D Galaxy Sphere</title>
+    <title>告白气球</title>
     <style>
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
